Fix start/join campaign buttons on small screens

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -20,4 +20,11 @@
   .btn {
     padding: 8px 10px;
   }
+
+  .home-campaign-buttons {
+    @media (min-width: $screen-sm-min) {
+      button:first-child { margin-right: 10px; }
+      button:last-child { margin-left: 10px; }
+    }
+  }
 }
